# forge

./: .otto.yml  Cargo.toml  README.md  build.rs  forge.yml
docs/: forge-research.md  mwp-conversation-2026-03-11.md  pipeline-validation-gaps.md
docs/design/: 2026-03-12-forge.md  2026-03-13-examples-and-init.md  2026-03-13-explicit-fabric-executor.md  2026-03-13-pipeline-directory-discovery.md  2026-03-13-stages-indexmap.md  2026-03-14-command-executor.md  2026-03-14-shell-executor.md  2026-03-14-unified-ls-command.md
examples/: forge.yml
examples/pipelines/: research.yml  techspec.yml
examples/references/: voice.md
examples/references/templates/: techspec.md
pipelines/: confluence-doc.yml  jira-epic.yml  research.yml  status-update.yml  techspec.yml
references/rubrics/: research-rubric.md  techspec-rubric.md
references/templates/: confluence-doc.md  status-update.md  techspec.md
src/: briefcase.rs  cli.rs  config.rs  executor.rs  init.rs  lib.rs  main.rs  pipeline.rs  store.rs
tests/: mwp_conformance.rs
