[package]
name = "forge"
version = "0.1.0"
edition = "2024"
authors = ["Scott Idler <scott.a.idler@gmail.com>"]
build = "build.rs"
description = "MWP Pipeline Runner — portable briefcase pattern for content pipelines"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
dirs = "6.0.0"
env_logger = "0.11.9"
eyre = "0.6.12"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
shellexpand = "3.1.0"
taskstore = { path = "../taskstore" }
uuid = { version = "1", features = ["v7"] }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
